# silicon-scope-aoi

./: .gitignore  main.py  mypy.ini  pyproject.toml  ruff.toml
src/concurrency/: thread_manager.py
src/core/: inference.py
src/io/: snapshot.py
src/sources/: camera.py
src/tui/: app.py  messages.py  screens.py
src/ui/: app.css  app.py  app.tcss  screens.py  video_window.py
